# bevy_chess

./: Cargo.toml
.cargo/: config.toml
assets/: Bishop.glb  Board.glb  ChessBoard.glb  ChessBoard.gltf  Cylinder.glb  King.glb  Knight.glb  Pawn.glb  Queen.glb  Rook.glb
src/: lib.rs  main.rs
