[package]
name = "bevy_chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["file_watcher"] }
bevy_materialize = "0.4.0"
rand = "0.9.0"
rayon = "1.10.0"
itertools = "0.14.0"
bevy-inspector-egui = "0.29.1"

log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[features]
dynamic_linking = ["bevy/dynamic_linking"]

[workspace]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
